--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
 		"react-bootstrap": "^2.5.0",
 		"react-datetime-picker": "^3.5.0",
 		"react-dom": "^18.2.0",
+		"react-icons": "^4.6.0",
 		"react-paypal-button-v2": "^2.6.3",
 		"react-redux": "^8.0.2",
 		"react-router-bootstrap": "^0.26.2",
