--- a/client/package.json
+++ b/client/package.json
@@ -8,11 +8,13 @@
 		"@testing-library/react": "^13.3.0",
 		"@testing-library/user-event": "^13.5.0",
 		"axios": "^0.27.2",
+		"leaflet": "^1.9.3",
 		"react": "^18.2.0",
 		"react-bootstrap": "^2.5.0",
 		"react-datetime-picker": "^3.5.0",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.6.0",
+		"react-leaflet": "^4.2.0",
 		"react-paypal-button-v2": "^2.6.3",
 		"react-redux": "^8.0.2",
 		"react-router-bootstrap": "^0.26.2",
