--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
 		"react-router-bootstrap": "^0.26.2",
 		"react-router-dom": "^6.3.0",
 		"react-scripts": "5.0.1",
+		"react-toastify": "^9.1.1",
 		"redux": "^4.2.0",
 		"redux-devtools-extension": "^2.13.9",
 		"redux-thunk": "^2.4.1",
