--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^6.5.3",
 		"nodemon": "^2.0.19",
+		"react-hot-toast": "^2.4.0",
 		"redis": "^4.3.0"
 	},
 	"devDependencies": {
