--- a/client/package.json
+++ b/client/package.json
@@ -9,11 +9,13 @@
 		"@testing-library/user-event": "^13.5.0",
 		"aos": "^2.3.4",
 		"axios": "^0.27.2",
+		"gapi-script": "^1.2.0",
 		"leaflet": "^1.9.3",
 		"react": "^18.2.0",
 		"react-bootstrap": "^2.5.0",
 		"react-datetime-picker": "^3.5.0",
 		"react-dom": "^18.2.0",
+		"react-google-login": "^5.2.2",
 		"react-icons": "^4.6.0",
 		"react-leaflet": "^4.2.0",
 		"react-paypal-button-v2": "^2.6.3",
