--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
 		"express-async-handler": "^1.2.0",
+		"gapi-script": "^1.2.0",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^6.5.3",
 		"nodemon": "^2.0.19",
+		"react-google-login": "^5.2.2",
 		"react-hot-toast": "^2.4.0",
 		"redis": "^4.3.0"
 	},
