--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
+    "sass": "^1.68.0",
     "typewriter-effect": "^2.19.0",
     "web-vitals": "^2.1.4"
   },
